# POCS

./: .codecov.yml  .coveragerc  .dockerignore  .env  .gcloudignore  .gitignore  .pycodestyle.cfg  .readthedocs.yaml  .readthedocs.yml  .style.yapf  .travis.yml  404.html  AGENTS.md  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Changelog.md  Dockerfile  Doxyfile  GEMINI.md  IMPLEMENTATION.md  ISSUE_TEMPLATE.md  LICENSE  LICENSE.txt  OCS_notes.md  Observatory.py  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  Readme.md  TELEMETRY_TRANSITION.md  Test_DSLR.py  backup_setup.py  cloudbuild.yaml  config.yaml  (+25 more)
.github/: codecov.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  code-enhancement.md  feature_request.md
.github/workflows/: create-release.yml  docs.yml  pythontest.yaml  test.yml
.junie/: guidelines.md
CameraBox/: camera_box.ino  stino.settings
CameraBox/camera_box/: camera_box.ino
Comet/: alert_pocs.py  run_comet.sh  vo_sources.py
ComputerBox/: ComputerBox.ino
DSLR_Controller/: DSLR_Controller.ino
Horizon/: horizon_range.py
PocsAlerter/: alert_pocs.py
PocsAlerter/Comet/: parse_vo.py
PocsAlerter/EmailParser/: email_parser.py
PocsAlerter/GravWave/: grav_wave.py
PocsAlerter/Horizon/: horizon_range.py
SkyQueries/: sky_queries.py
WeatherStation/: WeatherStation.ino  stino.settings
admin/: __init__.py  uimodules.py  web.py  web_app.py
api/: index.html
architecture-for-beginners/: index.html
authors/: index.html
camera_board/: camera_board.ino
camera_box/: camera_box.ino
changelog/: index.html
ci/: Dockerfile  Dockerfile-2  Dockerfile-3  Dockerfile-3a  Dockerfile-4  README.md  pocs_pytest_in_envoy.sh
cli-guide/: index.html
computer_box/: computer_box.ino  telemetry_board.ino
conceptual-overview/: index.html
conf_files/: IQMon_config.yaml  config_donotread_1ocal.yaml  email_parsers.yaml  log.yaml  peas.yaml  performance.yaml  pocs-supervisord.conf  pocs.yaml  pocs_japanese.yaml  pocs_spanish.yaml  pyro_camera.yaml  snr_config.yaml
contributing/: index.html
docker/: Dockerfile  README.md  README.rst  build-image.sh  build-local-image.sh  cloudbuild-all.yaml  cloudbuild-amd64.yaml  cloudbuild.yaml  develop.Dockerfile  developer-env.Dockerfile  developer.Dockerfile  docker-compose-aag.yaml  docker-compose-develop.yaml  docker-compose-developer-env.yaml  docker-compose-developer.yaml  docker-compose-testing.yaml  docker-compose.yaml  entrypoint.sh  env  env_file  environment.yaml  latest.Dockerfile  setup-local-environment.sh
docs/: Makefile  POCS_overview.rst  README.md  README.rst  api.md  architecture-for-beginners.md  cli-guide.md  conceptual-overview.md  conf.py  contribute.rst  contributing.md  docker.rst  examples.md  getting_started.rst  glossary.md  index.md  index.rst  license.md  mkdocs.yml  modules.rst  nightly_reports.md  panoptes-overview.rst  panoptes.mount.rst  panoptes.rst  pocs-alternatives.rst  pocs-overview.rst  pocs.dome.rst  pocs.focuser.rst  pocs.mount.rst  pocs.scheduler.rst  pocs.sensors.rst  pocs.state.rst  pocs.tests.serial_handlers.rst  pocs.utils.images.rst  reqs.txt  requirements.txt  tui_plan.md  weather-station.md
examples/: README.md  beginner_simulation.py  i18n_demo.py  index.html
glossary/: index.html
historical-data-fixer/: README.md  data_preparer.py  schema.txt  schema_extractor.py
license/: index.html
notebooks/: Basic POCS Setup.ipynb  Exoplanet Observability.ipynb  Generating_Sky_Maps.ipynb  POCS Simulators.ipynb  Position Playground.ipynb  SchedulerPlayground.ipynb  TestPOCS.ipynb  Tiling_Algorithm.ipynb
panoptes/: Observatory.py  __init__.py  camera.py  core.py  event.py  mount.py  observatory.py  panoptes.py  pocs_process.py  scheduler.py  sensors.py  state.py  utils.py  version.py  weather.py  weather_station.py
peas/: PID.py  __init__.py  monitors.py  remote_sensors.py  sensors.py  weather.py  webcam.py  webcams.py
plans/: decoupled_hardware_config.md  robust_hardware_init.md  systemd_migration.md
pocs/: __init__.py  base.py  core.py  hardware.py  images.py  observatory.py  tracking.py  version.py
pocs_alerter/: alert_pocs.py  email_monitor.py  time_test.py
pong/: clouddb.py  storage.py
resources/: install-pocs.sh  tracking_model.yaml
scripts/: IQMon_config.yaml  analyze_polar_alignment_test.py  apt-packages-list.txt  arduino-recorder.py  arduino_recorder.py  bootstrap.sh  build_container.sh  build_containers.sh  collect-grid-stats.py  connect_clouddb_proxy.py  convert_dir_fits.py  cr2_to_fits.py  cr2_to_jpg.sh  download_support_files.py  download_support_files.sh  drift.py  email_monitor.py  entrypoint.sh  export_data.py  follow_sensor.py  gather_pec_data.py  get-cloud-observations.py  gphoto2.sh  indi.sh  install-dependencies.sh  install-protobuf.sh  list-arduinos.py  list_arduinos.py  load-simulators.py  lsusbplus.py  make_timelapse.py  measure_image.py  peas-shell.py  peas_shell  peas_shell.py  perform_drift_align.py  perform_polar_alignment_test.py  plot_drift_align.py  plot_weather.py  plot_weather.sh  (+44 more)
search/: search_index.json
serial/: SerialIO.py
site/: 404.html  index.html
telemetry_board/: mount_Current_Sensing.ino  telemetry_board.ino
test_arduino/: test_arduino.ino
tests/: Dockerfile  docker-compose.yaml  env  environment.yaml  pocs_testing.yaml  test_base.py  test_base_scheduler.py  test_camera.py  test_codestyle.py  test_config_model.py  test_constraints.py  test_convert.py  test_dispatch_scheduler.py  test_dome_astrohaven.py  test_dome_simulator.py  test_field.py  test_filterwheel.py  test_focuser.py  test_housekeeping_state.py  test_i18n.py  test_images.py  test_ioptron.py  test_mount.py  test_mount_simulator.py  test_observation.py  test_observatory.py  test_panbase.py  test_pocs.py  test_ready_state.py  test_remote_hardware.py  test_scheduler.py  test_sensors.py  test_state_machine.py  test_telemetry_service.py  test_theskyx_utils.py  testing.yaml
weather-station/: index.html
web/: app.py  uimodules.py  web_app.py
(+1579 files in other folders)
