[build-system]
requires = [
    "hatchling>=1.25.0",
    "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"

[project]
name = "panoptes-pocs"
description = "PANOPTES Observatory Control System"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Project PANOPTES", email = "developers@projectpanoptes.org" },
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astroplan",
    "astropy>=7.0",
    "astroquery",
    "certifi>=2024.2.2",
    "click>=8.2.1",
    "fastapi<0.106.0",
    "fastapi-utils",
    "GitPython",
    "human-readable",
    "numpy>=2",
    "panoptes-utils[config,images]>=0.2.53",
    "pandas",
    "pick",
    "Pillow>=10.0.1",
    "pyserial",
    "requests>=2.32.0",
    "scipy>=1.10.0",
    "scikit-image",
    "sparklines",
    "tqdm",
    "transitions",
    "typer",
    "typing-inspect",
    "urllib3>=2.0.7",
    "uvicorn[standard]",
    "watchdog",
]

[project.urls]
Homepage = "https://github.com/panoptes/POCS"
Documentation = "https://panoptes-pocs.readthedocs.org"
Forum = "https://forum.projectpanoptes.org"

[project.scripts]
pocs = "panoptes.pocs.utils.cli.main:app"

[project.optional-dependencies]
focuser = [
    "matplotlib",
]
google = [
    "google-cloud-firestore",
    "google-cloud-logging",
    "google-cloud-storage",
    "gsutil",
    "protobuf",
    "rsa",
]
weather = [
    "panoptes-aag",
]
all = [
    "panoptes-pocs[focuser,google,weather]"
]

[dependency-groups]
testing = [
    "coverage",
    "pycodestyle",
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-loguru",
    "pytest-remotedata>=0.3.1",
    "responses",
]
lint = [
    "ruff",
]
dev = [
    { include-group = "testing" },
    { include-group = "lint" },
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
features = ["all"]
dependencies = [
    { include-group = "testing" },
    { include-group = "lint" },
]
installer = "uv"

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
lint-fix = "ruff check --fix ."
fmt = "ruff format ."
fmt-check = "ruff format --check ."

[tool.hatch.envs.hatch-test]
features = ["testing"]
installer = "uv"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.build.targets.wheel]
packages = ["src/panoptes"]

[tool.pytest.ini_options]
addopts = [
    "--cov=panoptes.pocs",
    "--cov=tests",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:build/coverage.xml",
    "--no-cov-on-fail",
    "--doctest-ignore-import-errors",
    "--doctest-modules",
    "-x",
    "-vv",
]
norecursedirs = [
    "docker",
    "script",
    "resources",
    "dist",
    "build",
    ".tox",
]
testpaths = ["tests", "src"]
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "ALLOW_UNICODE",
    "IGNORE_EXCEPTION_DETAIL",
]
filterwarnings = [
    "ignore:elementwise == comparison failed:DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]
# pytest-doctestplus option
#doctest_plus expects a string value "enabled"
doctest_plus = "enabled"
markers = [
    "theskyx",
    "without_camera",
    "with_camera",
    "without_mount",
    "with_mount",
    "without_sensors",
    "with_sensors",
    "plate_solve",
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "notebooks",
    "resources",
    "conf_files"
]
