[metadata]
author = PANOPTES Team
author_email = info@projectpanoptes.org
description = Finding exoplanets with small digital cameras
edit_on_github = True
github_project = panoptes/POCS
keywords = Citizen-science open-source exoplanet digital DSLR camera astronomy STEM
license = MIT
long_description = PANOPTES: Panoptic Astronomical Networked Observatories for a Public Transiting Exoplanets Survey
package_name = pocs
url = https://projectpanoptes.org

[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[sphinx-apidocs]
packages =
    pocs
    peas

[tool:pytest]
testpaths= pocs/tests/ peas/tests/
python_files= test_*.py
norecursedirs= scripts resources bin docker
addopts= --doctest-modules
doctest_optionflags= ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
doctest_plus = enabled
filterwarnings =
    ignore:elementwise == comparison failed:DeprecationWarning
    ignore::pytest.PytestDeprecationWarning
markers =
    without_camera
    with_camera
    without_mount
    with_mount
    without_sensors
    with_sensors

[pycodestyle]
ignore = E501, E301, W504
max-line-length = 100

[options]
setup_requires =
    setuptools_scm
