[metadata]
name = panoptes-pocs
description = PANOPTES Observatory Control System
author = Project PANOPTES
author-email = developers@projectpanoptes.org
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/panoptes/POCS
project-urls =
    Documentation = https://panoptes-pocs.readthedocs.org
    Forum = https://forum.projectpanoptes.org
platforms = linux
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
scripts =
    bin/panoptes-develop
    bin/pocs
    bin/pocs-shell
    bin/peas-shell
    scripts/wait-for-it.sh

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!

setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    Flask
    PyYaml
    astroplan
    astropy
    matplotlib
    numpy
    pyserial>=3.1.1
    panoptes-utils>=0.2.28
    python-dotenv
    requests
    scipy
    transitions
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install POCS[PDF]` like:
developer =
    google-cloud-sdk
    google-cloud-bigquery[pandas,pyarrow]
    google-cloud-firestore
    google-cloud-storage
    jupyterlab
    pandas
    tabulate
google =
    google-cloud-storage
plotting =
    altair
    bokeh
    holoviews
    hvplot
    seaborn
testing =
    coverage
    pycodestyle
    pytest
    pytest-cov
    pytest-doctestplus
    pytest-remotedata>=0.3.1
    responses

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = panoptes.pocs.module:function
# For example:
# console_scripts =
#     fibonacci = panoptes.pocs.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
addopts =
    --cov panoptes.pocs
    --cov panoptes.peas
    --cov-branch
    --cov-report term-missing:skip-covered
    --no-cov-on-fail
    --doctest-modules
    --doctest-ignore-import-errors
    --failed-first
    -x
    --verbose
extras = True

[tool:pytest]
addopts =
    --doctest-modules
    -x
    -vv
norecursedirs =
    docker
    script
    resources
    dist
    build
    .tox
testpaths = tests src
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
filterwarnings =
    ignore:elementwise == comparison failed:DeprecationWarning
    ignore::pytest.PytestDeprecationWarning
doctest_plus = enabled
markers =
    without_camera
    with_camera
    without_mount
    with_mount
    without_sensors
    with_sensors

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pycodestyle]
max-line-length = 100

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = pocs
extensions =
    no_skeleton
    namespace
    markdown
namespace = panoptes

[coverage:run]
branch = True
concurrency =
    multiprocessing
    threading
parallel = True

[coverage:paths]
source =
    src/
    */site-packages/

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
# Have to re-enable the standard pragma
    pragma: no cover

# Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

# Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

# Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True
